# foxglove-bridge

./: Cargo.toml  mrow.mcap  test.h264
flatbuffer_gen_tool/: main.py  pyproject.toml
scripts/: vcan_down.sh  vcan_up.sh
src/: commands.rs  foxglove.rs  foxglove_utils.rs  main.rs  sinks.rs  sources.rs
src/sinks/: foxglove_utils.rs
src/sinks/foxglove_utils/: mcap_sink.rs  websocket_sink.rs
src/sources/: can.rs  video.rs
src/sources/can/: socketcan_utils.rs
src/sources/video/: webcam.rs
